--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,7 @@
     <h1>All Campgrounds</h1>
 
     <% for(let campground of campgrounds){ %>
-        <div class="card">
+        <div class="card mb-2">
             <div class="row">
                 <div class="col-md-4">
                     <% if(campground.images[0]){ %>
