--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -6,7 +6,7 @@
             <div class="card mb-3">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel"
                     data-bs-interval="false">
-                    <div class="carousel-inner">
+                    <div class="carousel-inner"  >
                         <% campground.images.forEach((img,i)=> {%>
                             <div class="carousel-item <%= i === 0 ? 'active':'' %>">
                                 <img src="<%=img.url%>" class="d-block w-100" alt="...">
@@ -59,7 +59,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div class="card mb-3" id='map' style='width: 639px; height: 300px;'></div>
+            <div class="card mb-3" id='map' style="width: 100%;height:300px;"></div>
             <% if(currentUser) {%>
                 <h2>Leave a review</h2>
                 <form action='/campgrounds/<%= campground._id %>/reviews' method="POST" class='needs-validation'
@@ -117,7 +117,6 @@
                                             <button class='btn btn-sm btn-danger'>Delete</button>
                                         </form>
                                         <% } %>
-                                            <%= console.log(campground) %>
                                 </div>
                             </div>
                             <% } %>
