--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,28 +1,35 @@
 <% layout('layout/boilerplate') %>
+
+<div class='container d-flex justify-content-center align-items-center mt-3'>
     <div class="row">
-        <h1 class="text-center">
-            Sign-Up
-        </h1>
         <div class="col-6 offset-3">
-            <form action='/register' method="POST" class='needs-validation' novalidate>
-                <div class='mb-3'>
-                    <label class='form-label' for='username'>Username</label>
-                    <input class='form-control' type='text' id='username' name='username' placeholder="Enter Username"
-                        required>
+            <div class="card shadow">
+                <img src="https://images.unsplash.com/photo-1537225228614-56cc3556d7ed?ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzN8fGNhbXB8ZW58MHx8MHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=600&q=60" alt="" class="card-img-top">
+                <div class="card-body">
+                    <form action='/register' method="POST" class='needs-validation' novalidate>
+                        <div class='mb-3'>
+                            <label class='form-label' for='username'>Username</label>
+                            <input class='form-control' type='text' id='username' name='username' placeholder="Enter Username"
+                                required autofocus>
+                        </div>
+                        <div class='mb-3'>
+                            <label class='form-label' for='email'>Email-Id</label>
+                            <input class='form-control' type='email' id='email' name='email' placeholder='Enter Email-id'
+                                required>
+                        </div>
+                        <div class='mb-3'>
+                            <label class='form-label' for='password'>Password</label>
+                            <input class='form-control' type='password' id='password' name='password'
+                                placeholder='Enter Password' required>
+                        </div>
+                        <div class="mb-3 d-grid">
+                            <button class='btn btn-success'>SignUp</button>
+                        </div>
+                    </form>
                 </div>
-                <div class='mb-3'>
-                    <label class='form-label' for='email'>Email-Id</label>
-                    <input class='form-control' type='email' id='email' name='email' placeholder='Enter Email-id'
-                        required>
-                </div>
-                <div class='mb-3'>
-                    <label class='form-label' for='password'>Password</label>
-                    <input class='form-control' type='password' id='password' name='password'
-                        placeholder='Enter Password' required>
-                </div>
-                <div class="mb-3">
-                    <button class='btn btn-success'>Submit</button>
-                </div>
-            </form>
+            </div>
         </div>
     </div>
+</div>
+
+
